--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             　<li class="hover"><a href="#profile-wrapper"><p>Profile</p></a></li>
               <li class="hover"><a href="#works-wrapper"><p>Works</p></a></li>
               <li class="hover"><a href="#skills-wrapper"><p>Skills</p></a></li>
+              <li class="hover"><a href="#cando-wrapper"><p>Price</p></a></li>
               <li class="hover"><a href="#contact-wrapper"><p>Contact</p></a></li>
              
               <button type="button" class="humbarger-btn">
@@ -33,6 +34,7 @@
                 <li><a href="#profile-wrapper"><p>Profile</p></a></li>
                 <li><a href="#works-wrapper"><p>Works</p></a></li>
                 <li><a href="#skills-wrapper"><p>Skills</p></a></li>
+                <li class="hover"><a href="#cando-wrapper"><p>Price</p></a></li>
                 <li><a href="#contact-wrapper"><p>Contact</p></a></li>
               </div>
               <div class="humbarger-bg"></div>
@@ -50,8 +52,9 @@
                     <img src="img/myprofile.JPG" width="200px" height="200px" alt="プロフィール" class="profile-img fadeIn">
                    <div class="profile-content">
                     <h3>Kazuma Kobayashi</h3>
-                    <p>早稲田大学 教育学部に所属するハタチの大学生フリーランス。2019年４月からプログラミング学習をはじめ、基礎学習、サイト模写を経て現在はクラウドワークス・受託契約にてWeb制作とLP制作を中心に案件を受注。</p>
-                    <p>ブログを運営していた経験から、SEOの知識も持ち合わせているため、SEOを意識したサイト制作が可能。</p>
+                    <p>早稲田大学に通うフリーランスWebクリエイター&Webエンジニア。</p>
+                    <p>主にスタートアップやベンチャー、toB、toCなど様々なサイト、ランディングページを制作。</p>
+                    <p>成果の出るLP、サイト制作を心がけております。</p>
                 </div>
                 </div>
         </div>
@@ -60,10 +63,8 @@
                 <h2 class="works-h2">Works</h2>
                 <div class="works-list">
                     <ul>
-                        <li class="fadeIn"><p>Wordpress自作テーマ「For Mens」</p><a class="formens" href="img/formens.png"><img src="img/formens.png" alt="画像" width="200px" height="500px"></a></li>
-                        <li class="fadeIn"><p>ダンススクール「plus+」のLP制作</p><a class="flower" href="img/dance.png"><img src="img/dance.png" alt="画像" width="200px" height="1500px"></a></li>
-                        <li class="fadeIn"><p>医療マッチングアプリ「HOKUTO」のLP制作</p><a class="inter" href="img/hokuto.png"><img src="img/hokuto.png" alt="画像" width="200px" height="1000px"></a></li>
-                        <li class="fadeIn"><p>個別指導塾エスポワールのLP制作</p><a class="always" href="img/espor.png"><img src="img/espor.png" alt="画像"　width="200px" height="900px"></a></li>
+                        <li class="fadeIn"><img src="img/dance-pc.png" alt=""></li>
+                        <li class="fadeIn"><img src="img/waka-pc.png" alt=""></li>
                     </ul>
                     <div class="modal">
                             <div class="modal-bg"></div>
@@ -92,31 +93,36 @@
             </div>
         </div>
         <div id="cando-wrapper">
-            <h2 class="cando-h2">What I can do & Cost</h2>
+            <h2 class="cando-h2">Price</h2>
             <ul class="cando-list fadeIn">
                <li>
                <p class="cando-title">LP制作</p><br>
+               <img src="img/LP.png" alt="" class="lp-img">
                 価格：30,000円〜<br>
                 期間：2週間〜1ヶ月<br>
                 <p class="cando-description">綿密な導線設計と商品の魅力を引き出すデザイン考案から作らせていただきます。マーケ視点から制作を行い、問い合わせ向上・売上向上に繋がるLPを制作させていただきます。</p>
             　　</li>
                <li>
                     <p class="cando-title">WebサイトのWordpress化</p><br>
+                    <img src="img/PC _wp.png" alt="" class="pc_wp-img">
                     価格：30,000円〜<br>
                    　期間：2週間〜<br>
                    　<p class="cando-description">静的なWebサイトをWordpressに変換し、より管理しやすいサイトにします。また、SEO上有利になるようにカスタマイズもさせていただきます。(検索順位の向上が見込めます)</p>
                </li>
                <li>
                    <p class="cando-title">Wordpressによるサイト制作</p><br>
-                   価格：100,000円<br>
+                   <img src="img/PC.png" alt="" class="pc-img">
+                   価格：100,000円〜<br>
                    期間：1ヶ月〜<br>
                    <p class="cando-description">WordpressにてWebサイトを制作させていただきます。導入したい機能や使用感を相談しながら制作致します。</p>
                </li>
                <li>
                    <p class="cando-title">コーディング</p><br>
+                   <img src="img/PC_code.png" alt="" class="pc-code-img">
                    価格：10,000円〜<br>
                    期間：1週間〜<br>
-                　　<p class="cando-description">デザインカンプを元にコーディングさせていただきます。文言や素材をこちらで用意する場合は文字量に応じて別途料金を頂きます。</p>
+                　　<p class="cando-description">デザインカンプを元に、SEO対策を施しつつコーディングさせていただきます。</p>
+                   <p class="cando-description">文言や素材をこちらで用意する場合は文字量に応じて別途料金を頂きます。</p>
                </li>
             </ul>
         </div>
@@ -124,17 +130,15 @@
             <div class="contact">
                 <h2 class="contact-h2">Contact</h2>
                 <div class="contact-card fadeIn">
-                    <p><i class="fab fa-twitter-square"></i>:@thirdman_1220</p>
-                    <p><i class="fas fa-envelope"></i>:kobayashi.yima@gmail.com</p>
+                    <div class="contact-btn">
+                            <a href="https://twitter.com/thirdman_1220"><i class="fab fa-twitter-square"></i>：DMで問い合わせする</a>
+                            <a href="mailto:kobayashi.yima@gmail.com?body=お問い合わせありがとうございます。%0D%0A%0D%0A%0D%0Aお問い合わせ内容(必須)%0D%0A%0D%0Aお名前(必須)%0D%0A%0D%0A電話番号(任意)%0D%0A%0D%0A３日以内にご返信いたしますのでお待ちください。"><i class="fas fa-envelope"></i>:メールで問い合わせする</a>
+                    </div>
                 </div>
             </div>
         </div>
     </main>
     <footer>
-        <div class="message">
-          <img src="img/running.png" alt="" width="150px" height="150px">
-          <p>Keep Running...</p>
-        </div>
        
     </footer>
 </body>
