--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li><a href="#profile-wrapper"><p>Profile</p></a></li>
                 <li><a href="#works-wrapper"><p>Works</p></a></li>
                 <li><a href="#skills-wrapper"><p>Skills</p></a></li>
-                <li class="hover"><a href="#cando-wrapper"><p>Price</p></a></li>
+                <li><a href="#cando-wrapper"><p>Price</p></a></li>
                 <li><a href="#contact-wrapper"><p>Contact</p></a></li>
               </div>
               <div class="humbarger-bg"></div>
@@ -81,7 +81,7 @@
         </div>
         <div id="skills-wrapper">
             <div class="skills">
-                <h2 class="skills-h2">SKills</h2>
+                <h2 class="skills-h2">Skills</h2>
               <ul class="skills-list">
                   <li class="html fadeIn"><p class="skill-title">HTML5</p><div><img src="img/html.png" alt="" width="300px" height="250px"></div><p class="skill-ability">Ability</p></li>
                   <li class="css fadeIn"><p class="skill-title">CSS3</p><div><img src="img/css.png" alt="" width="300px" height="250px"></div><p class="skill-ability">Ability</p></li>
