--- a/index.html
+++ b/index.html
@@ -109,31 +109,30 @@
                <li>
                <p class="cando-title">LP制作</p><br>
                <img src="img/LP.png" alt="" class="lp-img">
-                価格：30,000円〜<br>
-                期間：2週間〜1ヶ月<br>
+               <p>価格：30,000円〜</p>
+               <p>期間：2週間〜1ヶ月</p> 
                 <p class="cando-description">綿密な導線設計と商品の魅力を引き出すデザイン考案から作らせていただきます。マーケ視点から制作を行い、問い合わせ向上・売上向上に繋がるLPを制作させていただきます。</p>
             　　</li>
                <li>
                     <p class="cando-title">WebサイトのWordpress化</p><br>
                     <img src="img/PC _wp.png" alt="" class="pc_wp-img">
-                    価格：30,000円〜<br>
-                   　期間：2週間〜<br>
-                   　<p class="cando-description">静的なWebサイトをWordpressに変換し、より管理しやすいサイトにします。また、SEO上有利になるようにカスタマイズもさせていただきます。(検索順位の向上が見込めます)</p>
+                    <p>価格：30,000円〜</p>
+                    <p>期間：2週間〜</p> 
+                    <p class="cando-description">静的なWebサイトをWordpressに変換し、より管理しやすいサイトにします。また、SEO上有利になるようにカスタマイズもさせていただきます。(検索順位の向上が見込めます)</p>
                </li>
                <li>
                    <p class="cando-title">Wordpressによるサイト制作</p><br>
                    <img src="img/PC.png" alt="" class="pc-img">
-                   価格：100,000円〜<br>
-                   期間：1ヶ月〜<br>
+                   <p>価格：100,000円〜</p>
+                   <p>期間：1ヶ月〜</p>
                    <p class="cando-description">WordpressにてWebサイトを制作させていただきます。導入したい機能や使用感を相談しながら制作致します。</p>
                </li>
                <li>
                    <p class="cando-title">コーディング</p><br>
                    <img src="img/PC_code.png" alt="" class="pc-code-img">
-                   価格：10,000円〜<br>
-                   期間：1週間〜<br>
-                　　<p class="cando-description">デザインカンプを元に、SEO対策を施しつつコーディングさせていただきます。</p>
-                   <p class="cando-description">文言や素材をこちらで用意する場合は文字量に応じて別途料金を頂きます。</p>
+                   <p>価格：10,000円〜</p>
+                   <p>期間：1週間〜</p>
+                   <p class="cando-description">デザインカンプを元に、SEO対策を施しつつコーディングさせていただきます。また、文言や素材をこちらで用意する場合は文字量に応じて別途料金を頂きます。</p>
                </li>
             </ul>
         </div>
