--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="main-top">
             <p class="top-text">Welcome To My Page!!</p>
         </div>
-        <div id="profile-wrapper">
+        <section id="profile-wrapper">
                 <h2 class="profile-h2">Profile</h2>
                 <div class="profile-inner">
                     <img src="img/myprofile.JPG" width="200px" height="200px" alt="プロフィール" class="profile-img fadeIn">
@@ -68,8 +68,8 @@
                     <p>成果の出るLP、サイト制作を心がけております。</p>
                 </div>
                 </div>
-        </div>
-        <div id="works-wrapper">
+        </section>
+        <section id="works-wrapper">
             <div class="works">
                 <h2 class="works-h2">Works</h2>
                 <div class="works-list">
@@ -89,8 +89,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div id="skills-wrapper">
+        </section>
+        <section id="skills-wrapper">
             <div class="skills">
                 <h2 class="skills-h2">Skills</h2>
               <ul class="skills-list">
@@ -102,8 +102,8 @@
                   <li class="wp fadeIn"><p class="skill-title">Wordpress</p><div><img src="img/WP.png" alt="" width="300px" height="250px"></div><p class="skill-ability">Ability</p></li>
               </ul>
             </div>
-        </div>
-        <div id="cando-wrapper">
+        </section>
+        <section id="cando-wrapper">
             <h2 class="cando-h2">Price</h2>
             <ul class="cando-list fadeIn">
                <li>
@@ -135,8 +135,8 @@
                    <p class="cando-description">デザインカンプを元に、SEO対策を施しつつコーディングさせていただきます。また、文言や素材をこちらで用意する場合は文字量に応じて別途料金を頂きます。</p>
                </li>
             </ul>
-        </div>
-        <div id="contact-wrapper">
+        </section>
+        <section id="contact-wrapper">
             <div class="contact">
                 <h2 class="contact-h2">Contact</h2>
                 <div class="contact-card fadeIn">
@@ -146,7 +146,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
     </main>
     <footer>
        
